--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "food2fork",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
     "web": "expo start --web"
   },
+  "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
@@ -19,20 +18,27 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "expo": "~48.0.10",
+    "expo-application": "~5.1.1",
     "expo-barcode-scanner": "~12.3.2",
+    "expo-file-system": "~15.2.2",
+    "expo-sharing": "~11.2.2",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "icons": "^1.0.0",
+    "md5": "^2.3.0",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
+    "react-native-device-info": "^10.6.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modal-datetime-picker": "^14.0.1",
+    "react-native-paper": "^5.7.1",
+    "react-native-phone-input": "^1.3.6",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "vector": "^0.0.4",
-    "expo-splash-screen": "~0.18.1"
+    "vector": "^0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
